--- a/SaganWebsite/SaganWebsite/wwwroot/css/site.css
+++ b/SaganWebsite/SaganWebsite/wwwroot/css/site.css
@@ -40,7 +40,7 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-left: 70px;
+    margin-right: 70px;
     padding-top: 23px;
     position: relative;
 }
