--- a/SaganWebsite/SaganWebsite/wwwroot/css/site.css
+++ b/SaganWebsite/SaganWebsite/wwwroot/css/site.css
@@ -81,6 +81,7 @@ nav a:hover::before {
     padding: 20px;
     font-size: 105%;
     width: 260px;
+    border: 5px solid #111;
 }
 
 .siderright h2 img {
@@ -97,6 +98,7 @@ nav a:hover::before {
     font-size: 105%;
     width: 260px;
     clear: right;
+    border: 5px solid #111;
 }
 
 .siderright2 h2 img {
