changed the hole roster page, and some background colors, and some small minor changes

--- a/SaganWebsite/SaganWebsite/Views/Home/Roster.cshtml
+++ b/SaganWebsite/SaganWebsite/Views/Home/Roster.cshtml
@@ -10,71 +10,90 @@
     </script>
 </head>
 <body>
-    <ul class="responsive_grid">
-        <li>
-            <div class="team_member">
-                <div class="info">
-                    <img src="~/images/jakobbjärne.jpg" />
-                    <h5>Jakob "mrGBG" Bjärne</h5>
-                    <h6>In-Game Leader</h6>
-                    <div class="infoFlagg">
-                        <p>&nbsp;<img alt="Sweden" src="https://static.hltv.org/images/bigflags/30x20/SE.gif" class="flag" /></p>
-                    </div>
-                </div>
-                <div class="info_reveal">
-                    <h3 class="text-center">Info</h3>
-                    <p>Age: 29</p>
-                    <p>City: Varberg &nbsp;<img alt="Sweden" src="https://static.hltv.org/images/bigflags/30x20/SE.gif" class="flag" /></p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                    <p>Age: 29</p>
-                </div>
+    <div id="container">
+        <h1> Our Team</h1>
+        <hr />
+        <div class="card">
+            <div class="front">
+                <img src="~/images/jakobbjärne.jpg" class="profilimage" />
+                <span class="name">Jakob Bjärne</span>
+                <hr />
+                <span class='role'> - In-Game Leader - </span>
+                <hr />
+                <span><img src="https://static.hltv.org/images/bigflags/30x20/SE.gif" /></span>
             </div>
-        </li>
-
-        <li>
-            <div class="team_member">
-                <div class="info">
-                    <img src="~/images/jag1.jpg" />
-                    <h5>Jacob "DITOX" Andersson</h5>
-                    <h6>Entry Fragger, Lurker</h6>
-                    <div class="infoFlagg">
-                        <p>&nbsp;<img alt="Sweden" src="https://static.hltv.org/images/bigflags/30x20/SE.gif" class="flag" /></p>
-                    </div>
-                </div>
-                <div class="info_reveal">
-                    <h3 class="text-center">Info</h3>
-                    <p>Age: 27</p>
-                    <p>City: Varberg &nbsp;<img alt="Sweden" src="https://static.hltv.org/images/bigflags/30x20/SE.gif" class="flag" /></p>
-                </div>
+            <div class="back">
+                <span>Info</span>
+                <p>Age: 29</p>
+                <p>City: Varberg</p>
             </div>
-        </li>
+        </div>
 
-        <li>
-            <div class="team_member">
-                <div class="info">
-                    <img src="~/images/laffe.jpeg" />
-                    <h5>Adam "lAffe" Rosén</h5>
-                    <h6>Rifler, Refragger</h6>
-                    <div class="infoFlagg">
-                        <p>&nbsp;<img alt="Sweden" src="https://static.hltv.org/images/bigflags/30x20/SE.gif" class="flag" /></p>
-                    </div>
-                </div>
-                <div class="info_reveal">
-                    <h3 class="text-center">Info</h3>
-                    <p>Age: 29</p>
-                    <p>City: Helsingborg &nbsp;<img alt="Sweden" src="https://static.hltv.org/images/bigflags/30x20/SE.gif" class="flag" /></p>
-                </div>
+        <div class="card">
+            <div class="front">
+                <img src="~/images/jag1.jpg" class="profilimage" />
+                <span class="name">Jacob Andersson</span>
+                <hr />
+                <span class='role'> - Entryfragger, Lurker - </span>
+                <hr />
+                <span><img src="https://static.hltv.org/images/bigflags/30x20/SE.gif" /></span>
             </div>
-        </li>
+            <div class="back">
+                <span>Info</span>
+                <p>Age: 27</p>
+                <p>City: Varberg</p>
+            </div>
+        </div>
 
+        <div class="card">
+            <div class="front">
+                <img src="~/images/laffe.jpeg" class="profilimage" />
+                <span class="name">Adam Rosén</span>
+                <hr />
+                <span class='role'> - Rifler, Refragger - </span>
+                <hr />
+                <span><img src="https://static.hltv.org/images/bigflags/30x20/SE.gif" /></span>
+            </div>
+            <div class="back">
+                <span>Info</span>
+                <p>Age: 29</p>
+                <p>City: Helsingborg</p>
+            </div>
+        </div>
 
-    </ul>
+        <div class="card">
+            <div class="front">
+                <img src="~/images/laffe.jpeg" class="profilimage" />
+                <span class="name">Adam Rosén</span>
+                <hr />
+                <span class='role'> - Rifler, Refragger - </span>
+                <hr />
+                <span><img src="https://static.hltv.org/images/bigflags/30x20/SE.gif" /></span>
+            </div>
+            <div class="back">
+                <span>Info</span>
+                <p>Age: 29</p>
+                <p>City: Helsingborg</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="front">
+                <img src="~/images/laffe.jpeg" class="profilimage" />
+                <span class="name">Adam Rosén</span>
+                <hr />
+                <span class='role'> - Rifler, Refragger - </span>
+                <hr />
+                <span><img src="https://static.hltv.org/images/bigflags/30x20/SE.gif" /></span>
+            </div>
+            <div class="back">
+                <span>Info</span>
+                <p>Age: 29</p>
+                <p>City: Helsingborg</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
 
