--- a/SaganWebsite/SaganWebsite/wwwroot/css/site.css
+++ b/SaganWebsite/SaganWebsite/wwwroot/css/site.css
@@ -131,9 +131,6 @@ nav a:hover::before {
 #container {
     width: auto;
     height: auto;
-    margin-top: 120px;
-    -webkit-perspective: 800px;
-    perspective: 800px;
     text-align: center;
 }
 
@@ -216,6 +213,7 @@ nav a:hover::before {
 }
 
 .front .role {
+    display: inline-block;
     color: #fff;
 }
 
