--- a/SaganWebsite/SaganWebsite/Views/Shared/_Layout.cshtml
+++ b/SaganWebsite/SaganWebsite/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="~/images/Sagan-Gaming.png" alt="logo" class="logo"/>
+            <img src="/images/logo_sagan_white1.png" alt="logo" class="logo" style="width: 245px; height: auto;">
             <nav>
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
